--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -254,7 +254,7 @@
                                             дополнительную информацию сбрасываем за 1-2 дня
                                             до тура всем кто записался и оплатил экскурсию.
                                             (как всегда оплата через расчетный счет в течении суток после брони)</p>
-                                        <p><b> -- </b> после небольшой пешей прогулки мы на месте.
+                                        <p><b>12:00 -5.12 и 11:00 -11.12</b> после небольшой пешей прогулки мы на месте.
                                             Проходим частную территорию и попадаем в Лимонарий!
                                             Удивительный уголок солнечно-лимонного счастья.
                                             Слушаем историю создания этого чуда. Обязательно
