--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -16,7 +16,7 @@
         content="Яркие сочные лимончики висящие на ветках интересно, экзотично и необычно..." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Limonariy.html" />
-    <meta property="og:image" content="images/Limonariy-og.jpg">
+    <meta property="og:image" content="images/Limonary/insade-Limonariy.jpg">
     <!--End Open Graph data-->
 
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
@@ -133,7 +133,7 @@
                     <h3 class="title">Лимонарий</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="images/Limonariy-max.jpg" alt="news image" class="img-fluid">
+                    <img src="images/Limonary/insade-Limonariy.jpg" alt="news image" class="img-fluid">
                     <!--
                     <div class="col-lg-5 col-xl-5 main-title-text">
                                 <h3 class="title">Лимонарий</h3>
