--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -163,29 +163,30 @@
                 </div>
                 <!--  //ЛОЛ -->
 
-                <!--  Лимонарий   -->
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+                  <!--  Вольногорские Мальдивы -->
+                <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                            <img src="images/Limonariy-mini.jpg" alt="Limonariy" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-Volnogorsk-Maldives.html">
+                            <img src="/images/Volnogorsk-Maldives/home-Volnogorsk-Maldives.jpg"
+                                alt="Volnogorsk" class="img-fluid" />
                         </a>
-                        <!-- <p><span class="fa fa-tags"></span> <span>150грн.</span></p> -->
+                        <p><span class="fa fa-tags"></span> <span> 630грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h6 class="mt-1" style="letter-spacing: 0px;"><span class="fa fa-map-marker mr-2"></span>Днепропетровская обл.</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                                Лимонарий
+                            <a href="https://novipovorot.pp.ua/page-Volnogorsk-Maldives.html">
+                                Вольногорские Мальдивы
                             </a>
                         </h5>
-                        <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
+                        <p class=""> Потрясающие барханы </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>14 Ноября</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Лимонарий -->
+                <!--  //Вольногорские Мальдивы  -->
                 
                    <!--  Зоопарк Пылышенко -->
                 <div class="col-lg-3 col-sm-6 mb-5">
