--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -115,12 +115,12 @@
                             <li class="breadcrumb-item">
                                 <a class="text-primary" href="packages.html">Туры</a>
                             </li>
-                            <li class="breadcrumb-item">
+                           <!-- <li class="breadcrumb-item">
                                 <a class="text-primary" href="packages-page-two.html">Туры, стр.2</a>
                             </li>
                             <li class="breadcrumb-item">
                                 <a class="text-primary" href="packages-page-three.html">Туры, стр.3</a>
-                            </li>
+                            </li>-->
                             
                             <li class="breadcrumb-item active" aria-current="page">Лимонарий</li>
                             
