--- a/packages.html
+++ b/packages.html
@@ -169,7 +169,7 @@
                         <a href="https://novipovorot.pp.ua/page-Limonariy.html">
                             <img src="images/Limonary/home-Limonariy.jpg" alt="Limonariy" class="img-fluid" />
                         </a>
-                        <!-- <p><span class="fa fa-tags"></span> <span>250грн.</span></p> -->
+                        <p><span class="fa fa-tags"></span> <span>250грн.</span></p> 
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
