--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -168,20 +168,20 @@
                         </p>
                         <hr>
                         <!-- Alert warning -->
-                        <!-- <div class="alert alert-warning mt-3 ">
+                        <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
-                             Цена 250 грн. от 4-12 -200 лет, до 4 лет бесплатно
+                             Цена <b>250</b> грн., от 4 до 12 лет цена <b>200</b> грн., до 4 лет <b>бесплатно</b>
                             </span>
-                        </div> -->
+                        </div>
                         <!-- //Alert warning -->
-                        <!--   <ul class="listing">
+                        <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>250 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                         <br>
-                       -->
+                       
                         <p>
                             Не забудь своих друзей, в большой компании всегда веселей!
                         </p>
