--- a/packages.html
+++ b/packages.html
@@ -118,7 +118,7 @@
                             <img src="images/cheese-farm/cheese-farm/home-cheese-farm.jpg" alt="baloon-fast"
                                 class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>220грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>240грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
@@ -131,7 +131,7 @@
                            Сырная ферма с дегустацией...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 13 Ноября </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 21 и 27 Ноября </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
