--- a/packages.html
+++ b/packages.html
@@ -156,7 +156,7 @@
                         </h5>
                         <p class="">Тайны и загадки родного острова Хортица... </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>14 Ноября </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 21 и 28 Ноября </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
