--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -15,7 +15,7 @@
     <meta property="og:description"
         content="Тайны и загадки острова. Удивительный и таинственный! Такой родной и привычный для жителей Запорожья остров." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://novipovorot.pp.ua/page-Stambul.html" />
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Hortica.html" />
     <meta property="og:image" content="images/hortica-max.jpg">
     <!--End Open Graph data-->
 
