--- a/page-Kiev-Kharkiv-Poltava.html
+++ b/page-Kiev-Kharkiv-Poltava.html
@@ -3,27 +3,27 @@
 
 <head>
      <!-- Заголовок -->
-    <title> Заголовок тура | Новый поворот</title>
+    <title> Киев. Харьков. Полтава | Новый поворот</title>
      <!-- //Заголовок -->
   
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
   
     <!-- Описание -->
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Описание  ">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Мы увидим самые красивые Новогодние елки сразу трех городов Киева, Харькова и Полтавы... ">
     <!-- //Описание -->
 	
     <!-- Ключевые слова -->
     <meta name="keywords"
-        content="Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Ключевые слова " />
+        content="Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Киев, Полтава, Харьков, завод елочных игрушек, Новгодний тур" />
     <!-- //Ключевые слова -->
   
     <!-- Open Graph -->
-    <meta property="og:title" content="Заголовок">
-    <meta property="og:description" content="Описание" />
+    <meta property="og:title" content="Киев. Харьков. Полтава">
+    <meta property="og:description" content="Мы увидим самые красивые Новогодние елки сразу трех городов Киева, Харькова и Полтавы..." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="Ссылка на страницу" />
-    <meta property="og:image" content="Картинка">
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Kiev-Kharkiv-Poltava.html" />
+    <meta property="og:image" content="images/Kiev-Kharkiv-Poltava/inside-Kiev-Kharkiv-Poltava.jpg">
     <!-- //Open Graph -->
 
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
