--- a/page-Kiev-Kharkiv-Poltava.html
+++ b/page-Kiev-Kharkiv-Poltava.html
@@ -3,7 +3,7 @@
 
 <head>
      <!-- Заголовок -->
-    <title> Киев. Харьков. Полтава | Новый поворот</title>
+    <title> Киев - Харьков - Полтава | Новый поворот</title>
      <!-- //Заголовок -->
   
     <meta name="viewport" content="width=device-width, initial-scale=1">
