--- a/page-Kiev-Kharkiv-Poltava.html
+++ b/page-Kiev-Kharkiv-Poltava.html
@@ -266,16 +266,30 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body">
                                         
+                                        <p class="txt-alg-jf"> <strong> 5:00 </strong>
+                                       Выезд из Центра Запорожья после минутки позитива.  Едем на МЯГКОМ И 
+				       УЮТНОМ ТРАНСПОРТЕ тур. класса (раскладные сидения), TV  (ЛЕГКАЯ ДОРОГА). 
+				       Заберем Вас : Авто и Жд вокзалы-Фестивальная-Металлургов-Каховская.
+                                         </p>
+                                         <p class="txt-alg-jf"> <strong> 15:15 </strong>
+                                         Завод елочных игрушек в Киевской области. Потрясающее место где рождаются игрушки из стекла и красок ручной работы. 
+					 Мы посетим экскурсию, побываем на МК распишем свою самую красивую игрушку. В магазине елочных игрушек вы найдете 
+				         самые красивые и необычные украшения, которых нет в магазинах ;)
+                                         </p>
+                                         <p class="txt-alg-jf"> <strong> 18:00-20:00 </strong>
+                                        посещение центральной елки страны на Софиевской площади Киева, рождественская ярмарка, красивые украшения и все 
+					самое интересное в центре Киева! Всю группу ждет небольшой бонус, о котором вы узнаете перед посещением елочки!
+                                         </p>
                                         <p class="txt-alg-jf"> <strong> Время </strong>
                                          Описание
                                          </p>
-                                         <p class="txt-alg-jf"> <strong> Время </strong>
+					 <p class="txt-alg-jf"> <strong> Время </strong>
                                          Описание
                                          </p>
-                                         <p class="txt-alg-jf"> <strong> Время </strong>
+					 <p class="txt-alg-jf"> <strong> Время </strong>
                                          Описание
                                          </p>
-                                        <p class="txt-alg-jf"> <strong> Время </strong>
+					 <p class="txt-alg-jf"> <strong> Время </strong>
                                          Описание
                                          </p>
                                         <p class="txt-alg-jf"><strong> 18:00 </strong>
