--- a/page-Kiev-Kharkiv-Poltava.html
+++ b/page-Kiev-Kharkiv-Poltava.html
@@ -266,10 +266,10 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body">
                                         
-                                        <p class="txt-alg-jf"> <strong> 5:00 </strong>
-                                       Выезд из Центра Запорожья после минутки позитива.  Едем на МЯГКОМ И 
-				       УЮТНОМ ТРАНСПОРТЕ тур. класса (раскладные сидения), TV  (ЛЕГКАЯ ДОРОГА). 
-				       Заберем Вас : Авто и Жд вокзалы-Фестивальная-Металлургов-Каховская.
+                                         <p class="txt-alg-jf"> <strong> 5:00 </strong>
+                                         Выезд из Центра Запорожья после минутки позитива.  Едем на МЯГКОМ И 
+				         УЮТНОМ ТРАНСПОРТЕ тур. класса (раскладные сидения), TV  (ЛЕГКАЯ ДОРОГА). 
+				         Заберем Вас : Авто и Жд вокзалы-Фестивальная-Металлургов-Каховская.
                                          </p>
                                          <p class="txt-alg-jf"> <strong> 15:15 </strong>
                                          Завод елочных игрушек в Киевской области. Потрясающее место где рождаются игрушки из стекла и красок ручной работы. 
@@ -277,22 +277,35 @@
 				         самые красивые и необычные украшения, которых нет в магазинах ;)
                                          </p>
                                          <p class="txt-alg-jf"> <strong> 18:00-20:00 </strong>
-                                        посещение центральной елки страны на Софиевской площади Киева, рождественская ярмарка, красивые украшения и все 
-					самое интересное в центре Киева! Всю группу ждет небольшой бонус, о котором вы узнаете перед посещением елочки!
+                                         Посещение центральной елки страны на Софиевской площади Киева, рождественская ярмарка, красивые украшения и все 
+					 самое интересное в центре Киева! Всю группу ждет небольшой бонус, о котором вы узнаете перед посещением елочки!
                                          </p>
-                                        <p class="txt-alg-jf"> <strong> Время </strong>
-                                         Описание
+                                         <p class="txt-alg-jf"> <strong> 23:30-00:00 </strong>
+                                         Автобусная -обзорная прогулка Новогоднему центру Полтавы и заселение в гостиницу.
+				         26 декабря
                                          </p>
-					 <p class="txt-alg-jf"> <strong> Время </strong>
-                                         Описание
+					 <p class="txt-alg-jf"> <strong> 9:00 </strong>
+                                         Выселение из гостиницы
                                          </p>
-					 <p class="txt-alg-jf"> <strong> Время </strong>
-                                         Описание
+					 <p class="txt-alg-jf"> <strong> 9:30-10:30 </strong>
+                                         Прогулка по центру Полтавы с новогодними локациями на Театральной площади и самыми 
+					 прекрасными местами которые только есть в городе! 
                                          </p>
-					 <p class="txt-alg-jf"> <strong> Время </strong>
-                                         Описание
+					 <p class="txt-alg-jf"> <strong> 10:40-11:40 </strong>
+                                         поздний завтрак или ранний обед в уютнейшем кафе Полтавы, вкусно быстро и есть все 
+				         от галушек до чизкейка! 
                                          </p>
-                                        <p class="txt-alg-jf"><strong> 18:00 </strong>
+					 <p class="txt-alg-jf"> <strong> 16:00-17:30 </strong>
+                                         Фентези парк Харькова потрясающие скульптуры, как из сказки: единорог со светящимся 
+					 хвостом, звездное небо, люди, деревья, птицы все произведения сияют как елочные 
+				         игрушки и нужно сделать веде 10000 фото!
+                                         </p>
+					 <p class="txt-alg-jf"> <strong> 18:00-19:00 </strong>
+                                         Центральная елка Харькова одна из самых красивых и высоких елок станы на самой 
+					 большой площади Европы! Прогулка по парку Шевченко в самом новогоднем настроении! 
+				         Каждого туриста ждет небольшое чудо! 
+                                         </p>
+                                        <p class="txt-alg-jf"><strong> 00:00 </strong>
                                             Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться 
                                             впечатлениями с друзьями и близкими (но еще лучше их взять с собой).<br>
                                             Выкладываем сториз и посты в 
