--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -115,6 +115,33 @@
             <h3 class="heading text-capitalize text-center"> Откройте Для Себя Наши Путешествия</h3>
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
+                
+                  <!--  Яхтклуб И AQUAZOO  -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html">
+                            <img src="images/Yacht-club-and-Aquazoo/home-Yacht-club-and-Aquazoo.jpg" alt="baloon-fast"
+                                class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>520грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожская обл.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html">
+                                Яхтклуб И AQUAZOO
+                            </a>
+                        </h5>
+                        <p class="">
+                            Трогательный зоопарк и яхтклуб...
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 30 Октября </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Яхтклуб И AQUAZOO  -->
               
                  <!--  Прогулка На Днепре -->
                 <div class="col-lg-3 col-sm-6 mb-5">
