--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -116,6 +116,29 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
                 
+                <!-- Межигорье. Умань. Перлина Кохання -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Mezhyhirya-Uman-pearls-of-love.html">
+                            <img src="/images/Mezhyhirya-Uman-pearls-of-love/home-Mezhyhirya-Uman-pearls-of-love.jpg"
+                                alt="Mezhyhirya-Uman-pearls-of-love" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>от 2400грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Украина</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Mezhyhirya-Uman-pearls-of-love.html">Межигорье. Умань. Перлина Кохання</a>
+                        </h5>
+                        <p class="">Лучшие места!</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>20 - 21 Ноября</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Межигорье. Умань. Перлина Кохання -->
+                               
                   <!--  Яхтклуб И AQUAZOO  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
