--- a/index.html
+++ b/index.html
@@ -522,13 +522,13 @@
                 </div>
                 <!-- //Львов  -->
 
-                <!-- Жу-Жу Парк  -->
+                <!-- Лимонарий  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Жу-Жу Парк</h4>
+                    <h4 class="destination mb-3">Лимонарий</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-zhu-zhu-park-Dnipro.html">
-                            <img src="./images/Zhu-zhu-park-Dnipro/pop-Zhu-zhu-park-Dnipro.jpg" class="img-fluid"
-                                alt="Зоопарк">
+                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
+                            <img src="./images/Limonary/pop-Limonariy.jpg" class="img-fluid"
+                                alt="Лимонарий">
                         </a>
                         <div class="rating">
                             <ul>
@@ -542,12 +542,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Жу-Жу Парк</h4>
+                            <h4>Лимонарий</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Жу-Жу Парк  -->
+                <!-- //Лимонарий  -->
 
             </div>
         </div>
