--- a/packages.html
+++ b/packages.html
@@ -176,7 +176,7 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-give-a-paw.html">
-                             Экскурсия в благотворительный фонд помощи животным...
+                            Дай лапу
                             </a>
                         </h5>
                         <p class="">
