--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -133,7 +133,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                    <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel tour-date"> 21 и 27 ноября</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel tour-date">  27 ноября</span>
                                     <!-- //Дата -->
                                 </li>
                             </li>
