--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -108,7 +108,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 21 и 28 Ноября</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 28 Ноября</span>
                                 </li>
                             </ul>
                         </div>
