--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -116,6 +116,31 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
                 
+                <!-- 6 Дней в Карпатах -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Six-Days-in-the-Carpathians.html">
+                            <img src="images/Six-Days-in-the-Carpathians/home-Six-Days-in-the-Carpathians.jpg"
+                                alt="6 Дней в Карпатах" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>3200грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Six-Days-in-the-Carpathians.html">6 Дней в
+                                Карпатах</a>
+                        </h5>
+                        <p class="">Расписание экскурсий в Карпаты</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  6 Дней в Карпатах -->
+
+                
                 <!-- Межигорье. Умань. Перлина Кохання -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
