--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -108,7 +108,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 28 Ноября</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 12 Декабря</span>
                                 </li>
                             </ul>
                         </div>
@@ -132,7 +132,7 @@
                             <span class="txt-alg-jf">
                                 Стоимость 80 грн. - для детей от 5 до 12 лет, 
                                 дети до 4-х лет бесплатно.
-                                При брони с 18 ноября цена 105 грн,
+                                При брони с 9 декабря цена 105 грн,
                                 дети 5-12 лет - 95 грн
                             </span>
                         </div>
