--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -166,12 +166,11 @@
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
 				
                             <span class="txt-alg-jf">
-                                Цена билета при брони: 
-                                 
-                                 при брони с <u class="ticket-price-before-Date-2"></u>:
-                                 <strong class="adult-ticket-price-Date-2"></strong>, 
-                                  <hr>
-				  175 грн детям 5-10 лет (4 вида сыра и молоко в дегустации)
+                                Цена билета                                                                                              
+				175 грн детям 5-10 лет (4 вида сыра и молоко в дегустации)
+                              </span>
+                                 <hr>
+                             <span class="txt-alg-jf">
                                  <i>*Примечание </i>
 				 до 4х лет бесплатно без участия в дегустации. При брони 10 мест, 11 бесплатно!
                                  Бери с собой друзей и родных, это будет круто!
