--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -164,10 +164,13 @@
                         <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
-				
+		 
                             <span class="txt-alg-jf">
-                                Цена билета                                                                                              
-				175 грн детям 5-10 лет (4 вида сыра и молоко в дегустации)
+                                Цена билета:                                                                                              
+				<b>240</b> грн.,
+                                детям 5-10 лет:                                                                                              
+				<b>175</b> грн.,
+                                (4 вида сыра и молоко в дегустации).
                               </span>
                                  <hr>
                              <span class="txt-alg-jf">
