--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -174,9 +174,11 @@
                               </span>
                                  <hr>
                              <span class="txt-alg-jf">
-                                 <i>*Примечание </i>
-				 до 4х лет бесплатно без участия в дегустации. При брони 10 мест, 11 бесплатно!
+                                 <i>*Примечание!
+				 До 4х лет бесплатно без участия в дегустации. 
+                                 При брони 10 мест, 11 бесплатно!
                                  Бери с собой друзей и родных, это будет круто!
+                                 </i>
                             </span>
                         </div>
                         <!-- //Информируем -->
