--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -108,9 +108,9 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
-                            <!--<li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.1</a></li>-->
+                            <!--<li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.2</a></li>-->
                           <!-- Название тура -->
-                            <li class="breadcrumb-item active tour-breadcrumb" aria-current="page"></li>
+                            <li class="breadcrumb-item active" aria-current="page"></li>
                           <!-- //Название тура -->
                         </ol>
                     </nav>
@@ -119,7 +119,7 @@
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
                     <!-- Заголовок -->
-                    <h3 class="title tour-title"></h3>
+                    <h3 class="title"></h3>
                     <!-- //Заголовок -->
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
@@ -133,7 +133,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                    <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel tour-date">  12 Декабря</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">  12 Декабря</span>
                                     <!-- //Дата -->
                                 </li>
                             </li>
