--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -125,7 +125,7 @@
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
                     <!-- Картинка -->
-                    <img src="" alt="Картинка" class="img-fluid tour-picture">  
+                    <img src="" alt="images/cheese-farm/cheese-farm/inside-cheese-farm.jpg" class="img-fluid tour-picture">  
                     <!-- //Картинка -->
                     
                     <div class="blog-two-two">
