--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -110,7 +110,7 @@
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
                             <!--<li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.2</a></li>-->
                           <!-- Название тура -->
-                            <li class="breadcrumb-item active" aria-current="page"></li>
+                            <li class="breadcrumb-item active" aria-current="page">Сырная Ферма С Дегустацией</li>
                           <!-- //Название тура -->
                         </ol>
                     </nav>
@@ -119,13 +119,13 @@
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
                     <!-- Заголовок -->
-                    <h3 class="title"></h3>
+                    <h3 class="title">Сырная Ферма С Дегустацией</h3>
                     <!-- //Заголовок -->
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
                     <!-- Картинка -->
-                    <img src="" alt="images/cheese-farm/cheese-farm/inside-cheese-farm.jpg" class="img-fluid tour-picture">  
+                    <img src="images/cheese-farm/cheese-farm/inside-cheese-farm.jpg" alt="Картинка - Сырная Ферма С Дегустацией" class="img-fluid tour-picture">  
                     <!-- //Картинка -->
                     
                     <div class="blog-two-two">
