--- a/booking.html
+++ b/booking.html
@@ -140,7 +140,10 @@
                             </div>
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
-                                    <option>Тур</option>
+                                    <option>Мурляндия</option>
+                                    <option>Киев. Харьков. Полтава</option>
+                                    <option>Сырная ферма с дегустацией</option>
+                                    <option>Хортица</option>
                                     <option>Харьков. Бал Хризантем</option>
                                     <option>VILLA DEL VINO</option>
                                     <option>Жу-Жу Парк</option>
