--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Днепр</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-dnipro-new-year.html">
-                              page-dnipro-new-year.html
+                              Новогодние огни Днепра
                             </a>
                         </h5>
                         <p class="">Круче чем в Париже! Лучшие новогодние украшения страны!  </p>
