--- a/booking.html
+++ b/booking.html
@@ -140,6 +140,7 @@
                             </div>
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
+                                    <option>Новогодние огни Днепра</option
                                     <option>Мурляндия</option>
                                     <option>Киев. Харьков. Полтава</option>
                                     <option>Сырная ферма с дегустацией</option>
