--- a/index.html
+++ b/index.html
@@ -745,6 +745,12 @@
     </script>
     <!-- /Aos script -->
 
+    <script src="./libs/waypoints/jquery.waypoints.min.js"></script>
+    <script src="./libs/countup/jquery.countup.js"></script>
+    <script>
+        $('.counter').countUp();
+    </script>
+    <!--
     <script>
         var number1 = document.querySelector('.number1'),
             number1Top = number1.getBoundingClientRect().top,
@@ -810,7 +816,7 @@
             }
         });
     </script>
-
+-->
     <!-- Schema.org -->
     <script type="application/ld+json">
         {
