--- a/index.html
+++ b/index.html
@@ -221,28 +221,28 @@
                 <div class="col-lg-3 col-6">
                     <div class="counter">
                         <span class="fa fa-smile-o"></span>
-                        <div class="timer count-title count-number number1" data-max="500">0</div>
+                        <div class="timer count-title count-number counter">500</div>
                         <p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6">
                     <div class="counter">
                         <span class="fa fa-ship"></span>
-                        <div class="timer count-title count-number number2" data-max="16">0</div>
+                        <div class="timer count-title count-number counter">16</div>
                         <p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6 mt-lg-0 mt-5">
                     <div class="counter">
                         <span class="fa fa-users"></span>
-                        <div class="timer count-title count-number number3" data-max="10">0</div>
+                        <div class="timer count-title count-number counter">10</div>
                         <p class="count-text text-uppercase">НАПРАВЛЕНИЙ</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6 mt-lg-0 mt-5">
                     <div class="counter">
                         <span class="fa fa-gift"></span>
-                        <div class="timer count-title count-number number4" data-max="7">0</div>
+                        <div class="timer count-title count-number counter">7</div>
                         <p class="count-text text-uppercase">ЛЕТ ОПЫТА</p>
                     </div>
                 </div>
