--- a/index.html
+++ b/index.html
@@ -221,28 +221,28 @@
                 <div class="col-lg-3 col-6">
                     <div class="counter">
                         <span class="fa fa-smile-o"></span>
-                        <div class="timer count-title count-number counter">500</div>
+                        <div class="timer count-title count-number number1" data-max="500">0</div>
                         <p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6">
                     <div class="counter">
                         <span class="fa fa-ship"></span>
-                        <div class="timer count-title count-number counter">16</div>
+                        <div class="timer count-title count-number number2" data-max="16">0</div>
                         <p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6 mt-lg-0 mt-5">
                     <div class="counter">
                         <span class="fa fa-users"></span>
-                        <div class="timer count-title count-number counter">10</div>
+                        <div class="timer count-title count-number number3" data-max="10">0</div>
                         <p class="count-text text-uppercase">НАПРАВЛЕНИЙ</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6 mt-lg-0 mt-5">
                     <div class="counter">
                         <span class="fa fa-gift"></span>
-                        <div class="timer count-title count-number counter">7</div>
+                        <div class="timer count-title count-number number4" data-max="7">0</div>
                         <p class="count-text text-uppercase">ЛЕТ ОПЫТА</p>
                     </div>
                 </div>
@@ -744,13 +744,13 @@
         });
     </script>
     <!-- /Aos script -->
-
+<!--
     <script src="./libs/waypoints/jquery.waypoints.min.js"></script>
     <script src="./libs/countup/jquery.countup.js"></script>
     <script>
         $('.counter').countUp();
     </script>
-    <!--
+ -->   
     <script>
         var number1 = document.querySelector('.number1'),
             number1Top = number1.getBoundingClientRect().top,
@@ -816,7 +816,7 @@
             }
         });
     </script>
--->
+
     <!-- Schema.org -->
     <script type="application/ld+json">
         {
