--- a/page-dnipro-new-year.html
+++ b/page-dnipro-new-year.html
@@ -138,9 +138,10 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата:&nbsp;<span class="dateOfTravel">
-											18 и 27 декабря
-										        </span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата:&nbsp;
+					<span class="dateOfTravel">
+					   18 и 27 декабря
+				    	</span>
                                     <!-- //Дата-->
                                 </li>
                             </ul>
@@ -180,12 +181,13 @@
 				  При брони С <u> 12 декабря </u>: взрослые 
                                  <strong> 520 </strong>грн., 
                                    дети от 6 до 12 лет
-                                 <strong> 500 </strongгрн.>;
+                                 <strong> 500 </strong>грн.;
 				   <hr>
-                                 <i>*Примечание </i>
+                                 <i>*Примечание 
 				    до 5х бесплатно (без предоставления отдельного места в транспорте)
 				    ВНИМАНИЕ! Всем туристам от 18 лет необходимо иметь при себе документы необходимые 
 				    для путешествий по Украине согласно постановления 1066 Каб.Мин.Укр. от 11.10.21
+				 </i>
                             </span>
                         </div>
                         <!-- //Информируем -->
