--- a/page-dnipro-new-year.html
+++ b/page-dnipro-new-year.html
@@ -178,6 +178,8 @@
                                  <strong> 500 </strong> грн.,
                                    дети  от 6 до 12 лет 
                                  <strong> 480 </strong>грн.;
+			   </span>	    
+			   <span class="txt-alg-jf">
 				  При брони С <u> 12 декабря </u>: взрослые 
                                  <strong> 520 </strong>грн., 
                                    дети от 6 до 12 лет
