--- a/packages.html
+++ b/packages.html
@@ -223,12 +223,12 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Днепр</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-dnipro-new-year.html">
-                              page-dnipro-new-year.html
+                              Новогодние огни Днепра
                             </a>
                         </h5>
                         <p class="">Круче чем в Париже! Лучшие новогодние украшения страны!  </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 18 и 27 Декабря </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 19 и 27 Декабря </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
