--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -146,7 +146,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>5 и 11 декабря</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 11 декабря</span>
                                 </li>
                             </ul>
                         </div>
@@ -249,12 +249,12 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
-                                        <p><b> 11:45 -5.12 и 10:45 -11.12 </b> время сбора группы на экскурсию.
+                                        <p><b> 14:45 -11.12 </b> время сбора группы на экскурсию.
                                             Сбор в районе 9-й больницы, Правый берег,
                                             дополнительную информацию сбрасываем за 1-2 дня
                                             до тура всем кто записался и оплатил экскурсию.
                                             (как всегда оплата через расчетный счет в течении суток после брони)</p>
-                                        <p><b>12:00 -5.12 и 11:00 -11.12</b> после небольшой пешей прогулки мы на месте.
+                                        <p><b> 14:00 -11.12</b> после небольшой пешей прогулки мы на месте.
                                             Проходим частную территорию и попадаем в Лимонарий!
                                             Удивительный уголок солнечно-лимонного счастья.
                                             Слушаем историю создания этого чуда. Обязательно
