--- a/page-murland.html
+++ b/page-murland.html
@@ -139,7 +139,7 @@
                                 <li>
                                     <!-- Дата -->
                                     <span class="fa fa-calendar mr-2"></span>Дата:&nbsp;<span class="dateOfTravel">
-											4 декабря 2021
+											15 января 2022
 										        </span>
                                     <!-- //Дата-->
                                 </li>
