--- a/packages.html
+++ b/packages.html
@@ -255,7 +255,7 @@
                         </h5>
                         <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 15 Января </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 15 Января 2022 </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
