--- a/page-example.html
+++ b/page-example.html
@@ -183,7 +183,7 @@
                                  С <u> </u>: взрослые 
                                  <strong> </strong>грн., 
                                    дети от 3 до 12 лет
-                                 <strong> </strongгрн.>;
+                                 <strong> </strong>грн.;
 				    дети от 13 до 17 лет
                                  <strong> </strong>грн.
                                  <hr>
