--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -48,7 +48,7 @@
     
     <style>
         .badge-l {
-            width: 150px; background-color: #f8f9fa; border-radius: .25rem; text-align: center; padding: .25em .4em;
+            display: inline-block; background-color: #f8f9fa; border-radius: .25rem; text-align: center; padding: .25em .4em;
         }
     </style>
 
