--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -182,9 +182,9 @@
                             <span class="txt-alg-jf">
 				    Всем <u>туристам</u> от <span class="badge badge-danger"><b>18 лет</b></span> необходимо иметь при себе документы необходимые 
 				    для путешествия по Украине согласно
-				    <a href="https://zakon.rada.gov.ua/laws/show/1236-2020-%D0%BF#Text" target="_blank">Постановления 1236 Каб.Мин.Укр. от 9.12.2020</a>
+				    <a  class="text-danger" href="https://zakon.rada.gov.ua/laws/show/1236-2020-%D0%BF#Text" target="_blank">Постановления 1236 Каб.Мин.Укр. от 9.12.2020</a>
 				    с изменениями
-				    <a href="https://zakon.rada.gov.ua/laws/show/1066-2021-%D0%BF#Text" target="_blank">Постановления 1066 Каб.Мин.Укр. от 11.10.21</a>
+				    <a  class="text-danger" href="https://zakon.rada.gov.ua/laws/show/1066-2021-%D0%BF#Text" target="_blank">Постановления 1066 Каб.Мин.Укр. от 11.10.21</a>
                             </span>
                         </div>
                         <!-- //Alert danger-->
