--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -179,7 +179,8 @@
 			<!-- Alert danger -->
                         <div class="alert alert-danger mt-3 ">
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
-                            <span class="txt-alg-jf">
+                           <!-- <span class="txt-alg-jf">-->
+		            <span>
 				    Всем <u>туристам</u> от <span class="badge badge-danger"><b>18 лет</b></span> необходимо иметь при себе документы необходимые 
 				    для путешествия по Украине согласно
 				    <a  class="text-danger" href="https://zakon.rada.gov.ua/laws/show/1236-2020-%D0%BF#Text" target="_blank">Постановления 1236 Каб.Мин.Укр. от 9.12.2020</a>
