--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -294,19 +294,13 @@
 					   Переезд в горы, заселение в отель , отдых.
                                          </p>
 					    
-					<h5 class="badge-l">3 ДЕНЬ — и до конца заезда :</h5>
+					<h5 class="badge-l">3 ДЕНЬ — и до конца заезда:</h5>
                                         <p class="txt-alg-jf">
-                                          <ul class="list-unstyled">
-					     <li>Основная задача:
-						 <ul>
-						     <li>Подбираем необходимое снаряжение (прокат прямо в отеле);</li>
-						     <li>УЧИМСЯ: Если Вы едете в первый раз — не сомневайтесь: 100%
-							     научим Вас уверенно кататься на лыжах, независимо от Вашего возраста и физической подготовки;</li>
-						     <li>И КАТАЕМСЯ, знакомимся, общаемся, любуемся природой!</li>
-						  </ul>
-						</li>
-						  <li>Для опытных лыжников и бордеров — ближайший кресельный подъемник в 100 метрах от отеля.</li> 
-					   </ul>
+                                          - Подбираем необходимое снаряжение (прокат прямо в отеле);
+					  - УЧИМСЯ: Если Вы едете в первый раз — не сомневайтесь: 100% научим Вас уверенно кататься на лыжах, независимо от Вашего возраста и физической подготовки;
+					  - И КАТАЕМСЯ, знакомимся, общаемся, любуемся природой!
+					  - Для опытных лыжников и бордеров — ближайший кресельный подъемник в 100 метрах от отеля.
+					   
 					       После ужина по вечерам можно прогуляться по курорту среди настоящего Закарпатского леса, полюбоваться на Говерлу и Петрос,
 					       прокатиться на лошадях в упряжке с бубенчиками, если Вы едете первый раз — проведем экскурсию по вечернему Драгобрату, зайдем в
 					       колыбы, покажем где сувениры, ночные клубы, а так же Вас ждут настольные игры, дискотека, караоке и другие мероприятия… 
