--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -296,10 +296,10 @@
 					    
 					<h5 class="badge-l">3 ДЕНЬ — и до конца заезда:</h5>
                                         <p class="txt-alg-jf">
-                                          - Подбираем необходимое снаряжение (прокат прямо в отеле);
-					  - УЧИМСЯ: Если Вы едете в первый раз — не сомневайтесь: 100% научим Вас уверенно кататься на лыжах, независимо от Вашего возраста и физической подготовки;
-					  - И КАТАЕМСЯ, знакомимся, общаемся, любуемся природой!
-					  - Для опытных лыжников и бордеров — ближайший кресельный подъемник в 100 метрах от отеля.
+                                          - Подбираем необходимое снаряжение (прокат прямо в отеле);<br>
+					  - УЧИМСЯ: Если Вы едете в первый раз — не сомневайтесь: 100% научим Вас уверенно кататься на лыжах, независимо от Вашего возраста и физической подготовки;<br>
+					  - И КАТАЕМСЯ, знакомимся, общаемся, любуемся природой!<br>
+					  - Для опытных лыжников и бордеров — ближайший кресельный подъемник в 100 метрах от отеля.<br>
 					   
 					       После ужина по вечерам можно прогуляться по курорту среди настоящего Закарпатского леса, полюбоваться на Говерлу и Петрос,
 					       прокатиться на лошадях в упряжке с бубенчиками, если Вы едете первый раз — проведем экскурсию по вечернему Драгобрату, зайдем в
