--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -183,9 +183,9 @@
 		            <span>
 				    Всем туристам</u> от <span class="badge badge-danger"><b>18 лет</b></span> необходимо иметь при себе документы необходимые 
 				    для путешествия по Украине согласно
-				    <a  class="text-danger" href="https://zakon.rada.gov.ua/laws/show/1236-2020-%D0%BF#Text" target="_blank"><u>Постановления Каб.Мин.Укр. №1236 от 9.12.2020</u></a>
+				    <a  class="alert-link" href="https://zakon.rada.gov.ua/laws/show/1236-2020-%D0%BF#Text" target="_blank"><u>Постановления Каб.Мин.Укр. №1236 от 9.12.2020</u></a>
 				    с изменениями
-				    <a  class="text-danger" href="https://zakon.rada.gov.ua/laws/show/1066-2021-%D0%BF#Text" target="_blank"><u>Постановления  Каб.Мин.Укр. №1066 от 11.10.21</u></a>
+				    <a  class="alert-link" href="https://zakon.rada.gov.ua/laws/show/1066-2021-%D0%BF#Text" target="_blank"><u>Постановления  Каб.Мин.Укр. №1066 от 11.10.21</u></a>
                             </span>
                         </div>
                         <!-- //Alert danger-->
@@ -199,7 +199,7 @@
                                  Стоимость тура от <strong>3500 до 3700</strong> грн, детям до 12 лет в сопровождении взрослых от <strong>2800 до 3500</strong> грн.
 				       
                                  <hr>
-                                 <i>*Предоплата <strong>200</strong> грн. - смотрите в <a href="#accordionExample"><u>описании</u></a> в зависимости от дат заезда! </i>
+                                 <i>*Предоплата <strong>200</strong> грн. - смотрите в <a class="alert-link" href="#accordionExample"><u>описании</u></a> в зависимости от дат заезда! </i>
                             </span>
                         </div>
                         <!-- //Информируем -->
