--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -177,7 +177,7 @@
                      <hr>
                     
 			<!-- Alert danger -->
-                        <div class="alert alert-danger mt-3 ">
+                        <div class="class="alert alert-danger mt-3" role="alert">
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
 		            
 			     Всем туристам</u> от <span class="badge badge-danger"><b>18 лет</b></span> необходимо иметь при себе документы необходимые 
@@ -190,7 +190,7 @@
                         <!-- //Alert danger-->
 			
                         <!-- Информируем -->
-                        <div class="alert alert-info mt-3 ">
+                        <div class="alert alert-info mt-3 "  role="alert">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
