--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -674,7 +674,7 @@
                         </div>
                         <!-- //Описание экскурсии -->
 
-			<ul class="list-group listing">
+			<ul class="list-group listing mb-3">
                             <li class="list-group-item active"> Даты заездов: </li>
 
                             <li class="list-group-item">
@@ -719,6 +719,12 @@
 				<span class="fa fa-tags mr-2"></span> Цена детям: <span>3500 Грн.</span> <br />
                             </li>
 				
+			   <li class="list-group-item">
+                                <span class="fa fa-calendar mr-2"></span>Дата: <span>25.01.2022 - 02.02.2022</span><br />
+                                <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>5 Дней</span><br />
+                                <span class="fa fa-tags mr-2"></span> Цена взрослым: <span>3700 Грн.</span> <br />
+				<span class="fa fa-tags mr-2"></span> Цена детям: <span>3500 Грн.</span> <br />
+                            </li>
 				
 			</ul>
 		
