--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -200,9 +200,9 @@
                                  <hr>
                                  
                             </span>
-			   <i>*Предоплата <strong>200</strong> грн. - смотрите в </i>
-			   <a class="alert-link" href="#accordionExample"><i>описании</i></a>
-			   <i>в зависимости от дат заезда! </i>
+			   <i>*Предоплата <strong>200</strong> грн. - смотрите в 
+			   <a class="alert-link" href="#arrivalDates"> датах заезда </a>
+			   в зависимости от дат заезда! </i>
                         </div>
                         <!-- //Информируем -->
                       
@@ -674,7 +674,7 @@
                         </div>
                         <!-- //Описание экскурсии -->
 
-			<ul class="list-group listing mb-3">
+			<ul class="list-group listing mb-3" id="arrivalDates">
                             <li class="list-group-item active"> Даты заездов: </li>
 
                             <li class="list-group-item">
