--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -200,7 +200,7 @@
                                  <hr>
                                  
                             </span>
-			   <i>*Предоплата <strong>200</strong> грн. - смотрите в 
+			   <i>*Предоплата <strong>200</strong> грн. - цены смотрите в 
 			   <a class="alert-link" href="#arrivalDates"> датах заезда </a>
 			   в зависимости от дат заезда! </i>
                         </div>
