--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -844,7 +844,7 @@
                         <span class="badge rounded-pill bg-secondary text-white"> Новый Поворот Запорожье </span>
                         <span class="badge rounded-pill bg-secondary text-white"> Путешествия </span>
                         <span class="badge rounded-pill bg-secondary text-white"> Туризм </span>
-              
+                        <span class="badge rounded-pill bg-secondary text-white"> Карпаты - 2022 </span>
                     </div>
                 </div>
             </div>
