--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -143,6 +143,11 @@
 					 2022 Год.
 				    </span>
                                     <!-- //Дата-->
+				    <a href="#arrivalDates">
+			              <button type="button" class="btn btn-light">
+                                         &gt; Расписание...
+                                      </button>
+				   </a>
                                 </li>
                             </ul>
                         </div>
@@ -675,6 +680,7 @@
                         </div>
                         <!-- //Описание экскурсии -->
 
+		        <h4>Расписание</h4>
 			<ul class="list-group listing mb-3" id="arrivalDates">
                             <li class="list-group-item active"> Даты заездов: </li>
 
