--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -202,9 +202,11 @@
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
                                  Стоимость тура от <strong>3500 до 3700</strong> грн, детям до 12 лет в сопровождении взрослых от <strong>2800 до 3500</strong> грн.
-				       
-                                 <hr>
-                                 
+				<br>
+				    <b>
+					    Для детей до 5 лет — БЕСПЛАТНО. (Без предоставления места и питания);
+				    </b>
+                                <hr>
                             </span>
 			   <i>*Предоплата <strong>200</strong> грн. - цены смотрите в 
 			   <a class="alert-link" href="#arrivalDates"> датах заезда </a>
