--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -188,9 +188,13 @@
 		            <span>
 			       Всем туристам</u> от <span class="badge badge-danger"><b>18 лет</b></span> необходимо иметь при себе документы необходимые 
 			       для путешествия по Украине согласно
-			       <a  class="alert-link" href="https://zakon.rada.gov.ua/laws/show/1236-2020-%D0%BF#Text" target="_blank">Постановления Каб.Мин.Укр. №1236 от 9.12.2020</a>
+			       <a  class="alert-link" href="https://zakon.rada.gov.ua/laws/show/1236-2020-%D0%BF#Text" target="_blank">
+				       <u>Постановления Каб.Мин.Укр. №1236 от 9.12.2020</u>
+		               </a>
 			       с изменениями
-			       <a  class="alert-link" href="https://zakon.rada.gov.ua/laws/show/1066-2021-%D0%BF#Text" target="_blank">Постановления  Каб.Мин.Укр. №1066 от 11.10.21</a>
+			       <a  class="alert-link" href="https://zakon.rada.gov.ua/laws/show/1066-2021-%D0%BF#Text" target="_blank">
+				       <u>Постановления  Каб.Мин.Укр. №1066 от 11.10.21</u>
+				</a>
                             </span>
                         </div>
                         <!-- //Alert danger-->
@@ -209,7 +213,7 @@
                                 <hr>
                             </span>
 			   <i>*Предоплата <strong>200</strong> грн. - цены смотрите в 
-			   <a class="alert-link" href="#arrivalDates"> датах заезда </a>
+				   <a class="alert-link" href="#arrivalDates"> <u>датах заезда </u></a>
 			   в зависимости от дат заезда! </i>
                         </div>
                         <!-- //Информируем -->
