--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -207,9 +207,7 @@
                             <span class="txt-alg-jf">
                                  Стоимость тура от <strong>3500 до 3700</strong> грн, детям до 12 лет в сопровождении взрослых от <strong>2800 до 3500</strong> грн.
 				<br>
-				    <b>
-					    Для детей до 5 лет — БЕСПЛАТНО. (Без предоставления места и питания);
-				    </b>
+				<b>Для детей до 5 лет — БЕСПЛАТНО. </b> (Без предоставления места и питания).
                                 <hr>
                             </span>
 			   <i>*Предоплата <strong>200</strong> грн. - цены смотрите в 
