--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -140,7 +140,32 @@
                 </div>
                 <!--  6 Дней в Карпатах -->
 
-                               
+                   <!--  Харьков. Бал Хризантем  -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Kharkov-ball-of-chrysanthemums.html">
+                            <img src="./images/Kharkov-ball-of-chrysanthemums/home-Kharkov-ball-of-chrysanthemums.jpg" alt="zhu-zhu"
+                                class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>1850грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1" style="letter-spacing: 0px;"><span class="fa fa-map-marker mr-2"></span>Днепропетровская обл.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Kharkov-ball-of-chrysanthemums.html">
+                               Харьков. Бал Хризантем
+                            </a>
+                        </h5>
+                        <p class="">
+                            Дворец Кенинга и бал Хризантем...
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 15 - 16 Октября</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- //Харьков. Бал Хризантем -->              
                 
                 <!--  Львов   -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
